--- a/02.Pandas/01.Series.ipynb
+++ b/02.Pandas/01.Series.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd \n"
    ]
   },
   {
@@ -22,6 +22,13 @@
    "metadata": {},
    "source": [
     "### 1. Series"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 판다스 자료구조(Series / DataFrame)"
    ]
   },
   {
@@ -50,6 +57,30 @@
     {
      "data": {
       "text/plain": [
+       "0    0\n",
+       "1    1\n",
+       "2    2\n",
+       "dtype: int32"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = pd.Series(np.arange(3))\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
        "서울    9904312\n",
        "부산    3448737\n",
        "인천    2890451\n",
@@ -57,7 +88,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +110,7 @@
        "(9904312, 9904312)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,30 +120,6 @@
     "s[0], s['서울']\n",
     "\n",
     "# 인덱싱 : 인덱스 or 내가 지정한 인덱스 값으로 불러올 수 있음  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "부산    3448737\n",
-       "대구    2466052\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s[[1,3]]\n",
-    "# 여러 개 꺼내기 \n",
-    "# 배열 인덱싱 - 부분 시리즈 반환 "
    ]
   },
   {
@@ -134,7 +141,9 @@
     }
    ],
    "source": [
-    "s[['부산','대구']]"
+    "s[[1,3]]\n",
+    "# 여러 개 꺼내기 \n",
+    "# 배열 인덱싱 - 부분 시리즈 반환 "
    ]
   },
   {
@@ -156,8 +165,7 @@
     }
    ],
    "source": [
-    "# 데이터는 넘파이므로 슬라이싱도 가능 \n",
-    "s[1::2]"
+    "s[['부산','대구']]"
    ]
   },
   {
@@ -168,12 +176,35 @@
     {
      "data": {
       "text/plain": [
+       "부산    3448737\n",
+       "대구    2466052\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 데이터는 넘파이므로 슬라이싱도 가능 \n",
+    "s[1::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
        "서울    9904312\n",
        "인천    2890451\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +228,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,21 +243,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    2\n",
-       "1    1\n",
-       "2    3\n",
-       "3    5\n",
-       "4    5\n",
+       "0    4\n",
+       "1    4\n",
+       "2    1\n",
+       "3    4\n",
+       "4    3\n",
        "dtype: int32"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +269,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1차    6\n",
+       "2차    6\n",
+       "3차    6\n",
+       "4차    5\n",
+       "5차    4\n",
+       "dtype: int32"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dice = pd.Series(np.random.randint(1,7,5), index=['1차','2차','3차','4차','5차'])\n",
+    "dice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +308,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +340,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,27 +353,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<zip at 0x2c86dea00c0>"
+       "<zip at 0x1bacf1d7500>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s.items()  # 키, 값 쌍꺼내기"
+    "s.items()  # 딕 등의 키, 값 쌍 꺼내기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +394,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(서울    9904312\n",
+       " 부산    3448737\n",
+       " 인천    2890451\n",
+       " 대구    2466052\n",
+       " dtype: int64,\n",
+       " 서울    9631482\n",
+       " 부산    3393191\n",
+       " 인천    2632035\n",
+       " 대전    1490158\n",
+       " dtype: int64)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s, s2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +437,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +463,7 @@
        "(nan, inf)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,30 +480,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "서울    9904312\n",
-       "부산    3448737\n",
-       "인천    2890451\n",
-       "대구    2466052\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -426,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +501,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +521,7 @@
        "array([9904312, 3448737, 2890451, 2466052], dtype=int64)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +543,7 @@
        "Index(['서울', '부산', '인천', '대구'], dtype='object')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +567,7 @@
        "Name: 도시, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +605,7 @@
        "100"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +626,7 @@
        "array([5, 6, 2, 1, 4, 3])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +647,7 @@
        "6"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +674,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +706,7 @@
        "Name: 도시, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +726,7 @@
        "(18709552, 4677388.0, 9904312, 2466052)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +754,7 @@
        "Name: 도시, dtype: float64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +787,7 @@
        "Name: 도시, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +812,7 @@
        "Name: 도시, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +837,7 @@
        "Name: 도시, dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +862,7 @@
        "Name: 도시, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,56 +877,6 @@
    "metadata": {},
    "source": [
     "- 결측치(Na, Null, Nan) 처리"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "대구         NaN\n",
-       "대전         NaN\n",
-       "부산     55546.0\n",
-       "서울    272830.0\n",
-       "인천    258416.0\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "대구     True\n",
-       "대전     True\n",
-       "부산    False\n",
-       "서울    False\n",
-       "인천    False\n",
-       "dtype: bool"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ds.isna() # 결측치가 있느냐?"
    ]
   },
   {
@@ -914,7 +926,7 @@
     }
    ],
    "source": [
-    "ds.isna()"
+    "ds.isna() # 결측치가 있느냐?"
    ]
   },
   {
@@ -1004,8 +1016,8 @@
     }
    ],
    "source": [
-    "# 결측치 처리방법(대체편)\n",
-    "ds.fillna(ds.mean())        # 평균으로 채우기 "
+    "# 결측치를 평균으로 대체\n",
+    "ds.fillna(ds.mean()) "
    ]
   },
   {
@@ -1103,7 +1115,7 @@
     }
    ],
    "source": [
-    "# 결측치 처리 방법(제거) \n",
+    "# 결측치 제거\n",
     "ds.dropna()\n",
     "\n",
     "# isna / fillna / dropna ** "
