--- a/06.Colab_np.pd/np.array.ipynb
+++ b/06.Colab_np.pd/np.array.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,17 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.6686,  0.0662,  0.024 ],\n",
-       "       [ 1.0567, -0.3529, -0.4702]])"
+       "array([[-0.2335, -0.1348, -0.1887],\n",
+       "       [-0.412 , -1.0702, -0.4097]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,16 +46,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.6686,  0.0662,  0.024 ,  1.0567, -0.3529, -0.4702])"
+       "array([-0.2335, -0.1348, -0.1887, -0.412 , -1.0702, -0.4097])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,17 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.6686, 2.0662, 3.024 ],\n",
-       "       [2.0567, 1.6471, 2.5298]])"
+       "array([[0.7665, 1.8652, 2.8113],\n",
+       "       [0.588 , 0.9298, 2.5903]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,17 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0.668555736683668, 0.06620119728387372, 0.024019755649714456],\n",
-       " [1.056658791707645, -0.3529124105524884, -0.470209252934224]]"
+       "[[-0.2334795298405907, -0.1348437274737777, -0.18873976686376565],\n",
+       " [-0.4119905504509189, -1.0701698485670446, -0.40967967285584084]]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,17 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1.6685557366836679, 2.0662011972838736, 3.0240197556497144],\n",
-       " [2.056658791707645, 1.6470875894475117, 2.529790747065776]]"
+       "[[0.7665204701594093, 1.8651562725262223, 2.811260233136234],\n",
+       " [0.5880094495490811, 0.9298301514329554, 2.590320327144159]]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,17 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[3.668555736683668, 6.066201197283874, 9.024019755649714],\n",
-       " [4.056658791707645, 5.647087589447512, 8.529790747065777]]"
+       "[[1.7665204701594093, 3.8651562725262223, 5.811260233136235],\n",
+       " [1.588009449549081, 2.9298301514329554, 5.590320327144159]]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,21 +171,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[ 6.6856,  0.662 ,  0.2402],\n",
-       "        [10.5666, -3.5291, -4.7021]]),\n",
-       " array([[ 1.3371,  0.1324,  0.048 ],\n",
-       "        [ 2.1133, -0.7058, -0.9404]]),\n",
-       " array([[ 1.3371,  0.1324,  0.048 ],\n",
-       "        [ 2.1133, -0.7058, -0.9404]]))"
+       "(array([[ -2.3348,  -1.3484,  -1.8874],\n",
+       "        [ -4.1199, -10.7017,  -4.0968]]),\n",
+       " array([[-0.467 , -0.2697, -0.3775],\n",
+       "        [-0.824 , -2.1403, -0.8194]]),\n",
+       " array([[-0.467 , -0.2697, -0.3775],\n",
+       "        [-0.824 , -2.1403, -0.8194]]))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "((2, 3), dtype('int32'), 6)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "6"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "array([5, 6])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "array([3, 6])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
        "        [4, 5, 6]]))"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "(array([4, 5, 6]), array([[4, 5, 6]]), array([[4, 5, 6]]))"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "(1, 3)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "(array([4, 5, 6]), array([4, 5, 6]), (3,))"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
        "       [13, 14, 15, 16]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
        "       [ 9, 10, 11, 12]])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "       [13, 16]])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
        "array([1, 4])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,18 +556,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([3, 8])"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-50-92bf5496f2b3>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-50-92bf5496f2b3>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    = np.array([arr[0,2], arr[1,3]])\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -578,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +585,7 @@
        "array([3, 8])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +622,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +643,7 @@
        "       [4, 6]])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +760,7 @@
        "       [15, 16, 17, 18, 19]])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -791,6 +789,49 @@
    ],
    "source": [
     "ar[np.ix_([2,0],[2,1,4])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10, 11, 12, 13, 14],\n",
+       "       [ 0,  1,  2,  3,  4]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "br = ar[[2,0]]\n",
+    "br"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[12, 11, 14],\n",
+       "       [ 2,  1,  4]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "br[:, [2,1,4]]"
    ]
   },
   {
