--- a/04.지도시각화/02.도로명주소API.ipynb
+++ b/04.지도시각화/02.도로명주소API.ipynb
@@ -88,6 +88,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "road_url = 'https://www.juso.go.kr/addrlink/addrLinkApi.do'\n",
+    "params1 = f'confmKey={road_key}&currentPage=1&countPerPage=10'\n",
+    "params2 = f'keyword={quote(\"산굼부리\")}&resultType=json'\n",
+    "url = f\"{road_url}?{params1}&{params2}\"\n",
+    "url"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
